feat: Integrate category management into story collection page and fix sync issue

--- a/开发日志.md
+++ b/开发日志.md
@@ -45,6 +45,10 @@
 - [x] 修复同名Prompt文件冲突问题
 - [x] 优化Prompt指令，明确去重和分类要求
 - [x] 修复AI返回内容不完整导致JSON解析失败的问题（提高API max_tokens限制）
+- [x] **分类管理优化与同步问题解决：**
+  - 将分类管理功能从设置页面迁移到故事采集页面的弹窗中，方便用户使用。
+  - 统一前端分类状态管理，由 `App.js` 获取并分发给需要分类的组件。
+  - 确保在分类（添加、编辑、删除）更新后，触发 `App.js` 重新获取分类列表，实现故事采集页面分类下拉框等组件的实时同步更新。
 
 ---
 
