完成所有基本功能，可使用

--- a/测试问题整理.md
+++ b/测试问题整理.md
@@ -1,2 +1,45 @@
-[] 1. 分类管理:我希望在前端页面增加分类管理，并且这个分类管理可以控制所有需要用到分类的地方，比如，数据库的分类，采集prompt中的分类，
- 
+【去重标准】
+- 仅排除与排除列表"标题完全相同"或"核心情节完全一致"的故事，其余均可采集。
+- 举例：如"托尔与巨人国的挑战"与"托尔智斗巨人"只要情节有明显差异，即可视为不同故事。
+
+请严格按照以下格式返回：
+
+1. 请一次性收集**1**个**封神演义**下的故事，**必须返回1个，不要少于1个**。
+2. 【重要】必须严格避免重复！以下故事标题已经存在于数据库中，请**绝对不要**收集这些故事：《羽蛇神的传说》，《普罗米修斯盗火》，《奥丁的献祭》，《纳拉达的智慧考验》，《闻太师兵败绝龙岭》，《黄天化魂归西岐》，《姜子牙渭水垂钓》。
+3. 请尽可能多地列举，不仅限于最著名的故事，也包括有代表性的次一级、小众、地方性故事。
+4. 如遇到数量不足，请优先补充各类不同版本、地方讲法、细节变化的故事。
+5. 除非确实无可采集内容，否则请尽最大努力补足数量。
+6. 输出格式必须为**JSON数组**，每个元素为一个故事对象，包含title（故事名称）、category（故事分类）、summary（简要情节和出处）字段。例如：
+```json
+[
+  {
+    "title": "《示例故事1》",
+    "category": "封神演义",
+    "summary": "简要描述故事情节和出处。"
+  },
+  {
+    "title": "《示例故事2》",
+    "category": "封神演义",
+    "summary": "简要描述故事情节和出处。"
+  }
+]
+```
+7. summary内容简要描述核心情节，并注明故事的出处（如《安徒生童话》《格林童话》《北欧神话集》《某民族传说集》等）。
+8. 如果确实无可采集内容，请直接返回空数组 []，不要添加任何说明文字。
+9. 只输出最终JSON数组，不要输出任何额外解释或对话。
+
+【特别强调】
+- 你**必须一次性返回1个故事**，不要少于1个。如确实无法满足数量，才返回空数组。
+
+【补充说明】
+- 你必须严格按照用户指定的分类（封神演义）来收集故事，不要改变分类。
+- 如果用户指定"封神演义"，就只收集"封神演义"的故事。
+- 每个故事的category字段必须与用户指定的分类（封神演义）完全一致。
+- summary内容要简洁明了，适合表格展示。
+- 神话、传说、童话等故事只要在大众文化或相关文明、民族、地区中流传、具有代表性即可，不要求历史真实发生。
+- 允许收集在世界各文明、民族、地区中小范围流传但有代表性的故事。
+- 鼓励将长篇或合集类作品（如《西游记》《格林童话集》《爱丽丝梦游仙境》等）中的每个独立章节、故事或完整小场景单独拆分，作为独立故事。
+- 例如，除"诸神的黄昏""雷神之锤"等主流故事外，也可采集如"伊登的苹果""赫尔莫德的冥界之旅""洛基与小矮人的赌注"等次一级故事。
+- 请不要过度保守，数量优先，保证不重复即可。
+- 再次强调：如无法满足数量，请尽最大努力补充，除非确实无可采集内容才返回空数组 []。
+- 建议优先选择情节紧凑、角色鲜明、寓意积极的小故事或片段，适合8-12页绘本呈现。
