优化了分批采集

--- a/测试问题整理.md
+++ b/测试问题整理.md
@@ -1,5 +1,80 @@
-正在发送采集请求...
-
-请求已发送，等待响应...
-
-收到响应：{"content":"\n\n```json\n[\n {\n \"title\": \"《幸运的贝儿》\",\n \"category\": \"经典童话\",\n \"summary\": \"讲述穷苦青年贝儿通过音乐天赋改变命运，最终与贵族女子结婚的故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《踩着面包走的女孩》\",\n \"category\": \"经典童话\",\n \"summary\": \"傲慢女孩英格为了不弄脏鞋子将面包踩入泥泞，被沼泽女巫惩罚坠入地狱的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《安妮·莉斯贝》\",\n \"category\": \"经典童话\",\n \"summary\": \"因抛弃私生子而遭诅咒的母亲，在鬼魂指引下经历灵魂救赎的悲情故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在养鸭场里》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过一只瘸腿小鸭的成长经历，展现自然界的残酷与生命力。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《老约翰尼讲的故事》\",\n \"category\": \"经典童话\",\n \"summary\": \"老人用四季更迭比喻人生哲理的寓言故事，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《墓穴里的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"母亲在墓地守候亡子时与死神对话，领悟生死真谛的感人故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《蝴蝶》\",\n \"category\": \"经典童话\",\n \"summary\": \"蝴蝶寻找理想伴侣的奇幻旅程，揭示爱情与生命真谛的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《荞麦》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过植物视角讲述骄傲导致毁灭的自然寓言，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《单身汉的睡帽》\",\n \"category\": \"经典童话\",\n \"summary\": \"老单身汉通过睡帽回忆往事，展现人生遗憾与温情的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《海象与蜗牛》\",\n \"category\": \"经典童话\",\n \"summary\": \"急于求成的蜗牛被海象欺骗的寓言，强调耐心的重要性。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《枞树》\",\n \"category\": \"经典童话\",\n \"summary\": \"渴望长大的枞树经历四季轮回，最终领悟生命意义的自然寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小杜克》\",\n \"category\": \"经典童话\",\n \"summary\": \"患难中成长的男孩杜克在困境中坚持学习，最终获得幸福的人生故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《癞蛤蟆》\",\n \"category\": \"经典童话\",\n \"summary\": \"跨越种族的友谊与牺牲故事，讲述魔法宝石引发的奇幻冒险。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓶颈大衣》\",\n \"category\": \"经典童话\",\n \"summary\": \"拟人化的大衣见证主人一生沉浮，反映社会变迁的讽刺寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《衬衫领子》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过衬衫领子的视角，讲述关于身份与骄傲的幽默寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《顽皮的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"顽童恶作剧引发超自然事件，最终悔改的成长故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《乌鸦》\",\n \"category\": \"经典童话\",\n \"summary\": \"宫廷侍女与乌鸦的爱情故事，融合阴谋与救赎的奇幻元素。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《猪倌》\",\n \"category\": \"经典童话\",\n \"summary\": \"王子化身猪倌追求公主，揭露虚荣与真爱的讽刺童话。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《银毫子》\",\n \"category\": \"经典童话\",\n \"summary\": \"一枚银币游历世界，见证人性善恶的寓言故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《雪人》\",\n \"category\": \"经典童话\",\n \"summary\": \"雪人爱上火炉的凄美爱情故事，隐喻生命与情感的短暂。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《藏着并不等于遗忘》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过古董柜里的对话，讲述历史记忆与传承的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《天鹅的巢》\",\n \"category\": \"经典童话\",\n \"summary\": \"天鹅家族守护后代的冒险故事，展现亲情与自然法则的冲突。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《接骨木树妈妈》\",\n \"category\": \"经典童话\",\n \"summary\": \"接骨木树精灵为男孩展示生命轮回的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓦尔都窗前的一瞥》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过修道院窗户见证的三个场景，讲述人生选择的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在遥远的海极》\",\n \"category\": \"经典童话\",\n \"summary\": \"企鹅与信天翁的对话展现不同地域文化碰撞的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小鬼和小商人》\",\n \"category\": \"经典童话\",\n \"summary\": \"精灵小鬼帮助商人重拾善良本性的奇幻故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《幸运的贝儿》\",\n \"category\": \"经典童话\",\n \"summary\": \"穷苦青年贝儿通过音乐天赋改变命运，最终与贵族女子结婚的故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《踩着面包走的女孩》\",\n \"category\": \"经典童话\",\n \"summary\": \"傲慢女孩英格为了不弄脏鞋子将面包踩入泥泞，被沼泽女巫惩罚坠入地狱的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《安妮·莉斯贝》\",\n \"category\": \"经典童话\",\n \"summary\": \"因抛弃私生子而遭诅咒的母亲，在鬼魂指引下经历灵魂救赎的悲情故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在养鸭场里》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过一只瘸腿小鸭的成长经历，展现自然界的残酷与生命力。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《老约翰尼讲的故事》\",\n \"category\": \"经典童话\",\n \"summary\": \"老人用四季更迭比喻人生哲理的寓言故事，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《墓穴里的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"母亲在墓地守候亡子时与死神对话，领悟生死真谛的感人故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《蝴蝶》\",\n \"category\": \"经典童话\",\n \"summary\": \"蝴蝶寻找理想伴侣的奇幻旅程，揭示爱情与生命真谛的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《荞麦》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过植物视角讲述骄傲导致毁灭的自然寓言，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《单身汉的睡帽》\",\n \"category\": \"经典童话\",\n \"summary\": \"老单身汉通过睡帽回忆往事，展现人生遗憾与温情的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《海象与蜗牛》\",\n \"category\": \"经典童话\",\n \"summary\": \"急于求成的蜗牛被海象欺骗的寓言，强调耐心的重要性。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《枞树》\",\n \"category\": \"经典童话\",\n \"summary\": \"渴望长大的枞树经历四季轮回，最终领悟生命意义的自然寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小杜克》\",\n \"category\": \"经典童话\",\n \"summary\": \"患难中成长的男孩杜克在困境中坚持学习，最终获得幸福的人生故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《癞蛤蟆》\",\n \"category\": \"经典童话\",\n \"summary\": \"跨越种族的友谊与牺牲故事，讲述魔法宝石引发的奇幻冒险。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓶颈大衣》\",\n \"category\": \"经典童话\",\n \"summary\": \"拟人化的大衣见证主人一生沉浮，反映社会变迁的讽刺寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《衬衫领子》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过衬衫领子的视角，讲述关于身份与骄傲的幽默寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《顽皮的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"顽童恶作剧引发超自然事件，最终悔改的成长故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《乌鸦》\",\n \"category\": \"经典童话\",\n \"summary\": \"宫廷侍女与乌鸦的爱情故事，融合阴谋与救赎的奇幻元素。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《猪倌》\",\n \"category\": \"经典童话\",\n \"summary\": \"王子化身猪倌追求公主，揭露虚荣与真爱的讽刺童话。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《银毫子》\",\n \"category\": \"经典童话\",\n \"summary\": \"一枚银币游历世界，见证人性善恶的寓言故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《雪人》\",\n \"category\": \"经典童话\",\n \"summary\": \"雪人爱上火炉的凄美爱情故事，隐喻生命与情感的短暂。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《藏着并不等于遗忘》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过古董柜里的对话，讲述历史记忆与传承的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《天鹅的巢》\",\n \"category\": \"经典童话\",\n \"summary\": \"天鹅家族守护后代的冒险故事，展现亲情与自然法则的冲突。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《接骨木树妈妈》\",\n \"category\": \"经典童话\",\n \"summary\": \"接骨木树精灵为男孩展示生命轮回的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓦尔都窗前的一瞥》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过修道院窗户见证的三个场景，讲述人生选择的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在遥远的海极》\",\n \"category\": \"经典童话\",\n \"summary\": \"企鹅与信天翁的对话展现不同地域文化碰撞的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小鬼和小商人》\",\n \"category\": \"经典童话\",\n \"summary\": \"精灵小鬼帮助商人重拾善良本性的奇幻故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《幸运的贝儿》\",\n \"category\": \"经典童话\",\n \"summary\": \"穷苦青年贝儿通过音乐天赋改变命运，最终与贵族女子结婚的故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《踩着面包走的女孩》\",\n \"category\": \"经典童话\",\n \"summary\": \"傲慢女孩英格为了不弄脏鞋子将面包踩入泥泞，被沼泽女巫惩罚坠入地狱的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《安妮·莉斯贝》\",\n \"category\": \"经典童话\",\n \"summary\": \"因抛弃私生子而遭诅咒的母亲，在鬼魂指引下经历灵魂救赎的悲情故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在养鸭场里》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过一只瘸腿小鸭的成长经历，展现自然界的残酷与生命力。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《老约翰尼讲的故事》\",\n \"category\": \"经典童话\",\n \"summary\": \"老人用四季更迭比喻人生哲理的寓言故事，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《墓穴里的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"母亲在墓地守候亡子时与死神对话，领悟生死真谛的感人故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《蝴蝶》\",\n \"category\": \"经典童话\",\n \"summary\": \"蝴蝶寻找理想伴侣的奇幻旅程，揭示爱情与生命真谛的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《荞麦》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过植物视角讲述骄傲导致毁灭的自然寓言，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《单身汉的睡帽》\",\n \"category\": \"经典童话\",\n \"summary\": \"老单身汉通过睡帽回忆往事，展现人生遗憾与温情的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《海象与蜗牛》\",\n \"category\": \"经典童话\",\n \"summary\": \"急于求成的蜗牛被海象欺骗的寓言，强调耐心的重要性。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《枞树》\",\n \"category\": \"经典童话\",\n \"summary\": \"渴望长大的枞树经历四季轮回，最终领悟生命意义的自然寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小杜克》\",\n \"category\": \"经典童话\",\n \"summary\": \"患难中成长的男孩杜克在困境中坚持学习，最终获得幸福的人生故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《癞蛤蟆》\",\n \"category\": \"经典童话\",\n \"summary\": \"跨越种族的友谊与牺牲故事，讲述魔法宝石引发的奇幻冒险。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓶颈大衣》\",\n \"category\": \"经典童话\",\n \"summary\": \"拟人化的大衣见证主人一生沉浮，反映社会变迁的讽刺寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《衬衫领子》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过衬衫领子的视角，讲述关于身份与骄傲的幽默寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《顽皮的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"顽童恶作剧引发超自然事件，最终悔改的成长故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《乌鸦》\",\n \"category\": \"经典童话\",\n \"summary\": \"宫廷侍女与乌鸦的爱情故事，融合阴谋与救赎的奇幻元素。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《猪倌》\",\n \"category\": \"经典童话\",\n \"summary\": \"王子化身猪倌追求公主，揭露虚荣与真爱的讽刺童话。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《银毫子》\",\n \"category\": \"经典童话\",\n \"summary\": \"一枚银币游历世界，见证人性善恶的寓言故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《雪人》\",\n \"category\": \"经典童话\",\n \"summary\": \"雪人爱上火炉的凄美爱情故事，隐喻生命与情感的短暂。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《藏着并不等于遗忘》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过古董柜里的对话，讲述历史记忆与传承的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《天鹅的巢》\",\n \"category\": \"经典童话\",\n \"summary\": \"天鹅家族守护后代的冒险故事，展现亲情与自然法则的冲突。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《接骨木树妈妈》\",\n \"category\": \"经典童话\",\n \"summary\": \"接骨木树精灵为男孩展示生命轮回的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓦尔都窗前的一瞥》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过修道院窗户见证的三个场景，讲述人生选择的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在遥远的海极》\",\n \"category\": \"经典童话\",\n \"summary\": \"企鹅与信天翁的对话展现不同地域文化碰撞的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小鬼和小商人》\",\n \"category\": \"经典童话\",\n \"summary\": \"精灵小鬼帮助商人重拾善良本性的奇幻故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《幸运的贝儿》\",\n \"category\": \"经典童话\",\n \"summary\": \"穷苦青年贝儿通过音乐天赋改变命运，最终与贵族女子结婚的故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《踩着面包走的女孩》\",\n \"category\": \"经典童话\",\n \"summary\": \"傲慢女孩英格为了不弄脏鞋子将面包踩入泥泞，被沼泽女巫惩罚坠入地狱的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《安妮·莉斯贝》\",\n \"category\": \"经典童话\",\n \"summary\": \"因抛弃私生子而遭诅咒的母亲，在鬼魂指引下经历灵魂救赎的悲情故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在养鸭场里》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过一只瘸腿小鸭的成长经历，展现自然界的残酷与生命力。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《老约翰尼讲的故事》\",\n \"category\": \"经典童话\",\n \"summary\": \"老人用四季更迭比喻人生哲理的寓言故事，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《墓穴里的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"母亲在墓地守候亡子时与死神对话，领悟生死真谛的感人故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《蝴蝶》\",\n \"category\": \"经典童话\",\n \"summary\": \"蝴蝶寻找理想伴侣的奇幻旅程，揭示爱情与生命真谛的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《荞麦》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过植物视角讲述骄傲导致毁灭的自然寓言，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《单身汉的睡帽》\",\n \"category\": \"经典童话\",\n \"summary\": \"老单身汉通过睡帽回忆往事，展现人生遗憾与温情的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《海象与蜗牛》\",\n \"category\": \"经典童话\",\n \"summary\": \"急于求成的蜗牛被海象欺骗的寓言，强调耐心的重要性。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《枞树》\",\n \"category\": \"经典童话\",\n \"summary\": \"渴望长大的枞树经历四季轮回，最终领悟生命意义的自然寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小杜克》\",\n \"category\": \"经典童话\",\n \"summary\": \"患难中成长的男孩杜克在困境中坚持学习，最终获得幸福的人生故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《癞蛤蟆》\",\n \"category\": \"经典童话\",\n \"summary\": \"跨越种族的友谊与牺牲故事，讲述魔法宝石引发的奇幻冒险。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓶颈大衣》\",\n \"category\": \"经典童话\",\n \"summary\": \"拟人化的大衣见证主人一生沉浮，反映社会变迁的讽刺寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《衬衫领子》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过衬衫领子的视角，讲述关于身份与骄傲的幽默寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《顽皮的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"顽童恶作剧引发超自然事件，最终悔改的成长故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《乌鸦》\",\n \"category\": \"经典童话\",\n \"summary\": \"宫廷侍女与乌鸦的爱情故事，融合阴谋与救赎的奇幻元素。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《猪倌》\",\n \"category\": \"经典童话\",\n \"summary\": \"王子化身猪倌追求公主，揭露虚荣与真爱的讽刺童话。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《银毫子》\",\n \"category\": \"经典童话\",\n \"summary\": \"一枚银币游历世界，见证人性善恶的寓言故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《雪人》\",\n \"category\": \"经典童话\",\n \"summary\": \"雪人爱上火炉的凄美爱情故事，隐喻生命与情感的短暂。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《藏着并不等于遗忘》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过古董柜里的对话，讲述历史记忆与传承的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《天鹅的巢》\",\n \"category\": \"经典童话\",\n \"summary\": \"天鹅家族守护后代的冒险故事，展现亲情与自然法则的冲突。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《接骨木树妈妈》\",\n \"category\": \"经典童话\",\n \"summary\": \"接骨木树精灵为男孩展示生命轮回的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓦尔都窗前的一瞥》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过修道院窗户见证的三个场景，讲述人生选择的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在遥远的海极》\",\n \"category\": \"经典童话\",\n \"summary\": \"企鹅与信天翁的对话展现不同地域文化碰撞的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小鬼和小商人》\",\n \"category\": \"经典童话\",\n \"summary\": \"精灵小鬼帮助商人重拾善良本性的奇幻故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《幸运的贝儿》\",\n \"category\": \"经典童话\",\n \"summary\": \"穷苦青年贝儿通过音乐天赋改变命运，最终与贵族女子结婚的故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《踩着面包走的女孩》\",\n \"category\": \"经典童话\",\n \"summary\": \"傲慢女孩英格为了不弄脏鞋子将面包踩入泥泞，被沼泽女巫惩罚坠入地狱的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《安妮·莉斯贝》\",\n \"category\": \"经典童话\",\n \"summary\": \"因抛弃私生子而遭诅咒的母亲，在鬼魂指引下经历灵魂救赎的悲情故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在养鸭场里》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过一只瘸腿小鸭的成长经历，展现自然界的残酷与生命力。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《老约翰尼讲的故事》\",\n \"category\": \"经典童话\",\n \"summary\": \"老人用四季更迭比喻人生哲理的寓言故事，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《墓穴里的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"母亲在墓地守候亡子时与死神对话，领悟生死真谛的感人故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《蝴蝶》\",\n \"category\": \"经典童话\",\n \"summary\": \"蝴蝶寻找理想伴侣的奇幻旅程，揭示爱情与生命真谛的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《荞麦》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过植物视角讲述骄傲导致毁灭的自然寓言，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《单身汉的睡帽》\",\n \"category\": \"经典童话\",\n \"summary\": \"老单身汉通过睡帽回忆往事，展现人生遗憾与温情的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《海象与蜗牛》\",\n \"category\": \"经典童话\",\n \"summary\": \"急于求成的蜗牛被海象欺骗的寓言，强调耐心的重要性。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《枞树》\",\n \"category\": \"经典童话\",\n \"summary\": \"渴望长大的枞树经历四季轮回，最终领悟生命意义的自然寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小杜克》\",\n \"category\": \"经典童话\",\n \"summary\": \"患难中成长的男孩杜克在困境中坚持学习，最终获得幸福的人生故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《癞蛤蟆》\",\n \"category\": \"经典童话\",\n \"summary\": \"跨越种族的友谊与牺牲故事，讲述魔法宝石引发的奇幻冒险。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓶颈大衣》\",\n \"category\": \"经典童话\",\n \"summary\": \"拟人化的大衣见证主人一生沉浮，反映社会变迁的讽刺寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《衬衫领子》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过衬衫领子的视角，讲述关于身份与骄傲的幽默寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《顽皮的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"顽童恶作剧引发超自然事件，最终悔改的成长故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《乌鸦》\",\n \"category\": \"经典童话\",\n \"summary\": \"宫廷侍女与乌鸦的爱情故事，融合阴谋与救赎的奇幻元素。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《猪倌》\",\n \"category\": \"经典童话\",\n \"summary\": \"王子化身猪倌追求公主，揭露虚荣与真爱的讽刺童话。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《银毫子》\",\n \"category\": \"经典童话\",\n \"summary\": \"一枚银币游历世界，见证人性善恶的寓言故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《雪人》\",\n \"category\": \"经典童话\",\n \"summary\": \"雪人爱上火炉的凄美爱情故事，隐喻生命与情感的短暂。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《藏着并不等于遗忘》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过古董柜里的对话，讲述历史记忆与传承的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《天鹅的巢》\",\n \"category\": \"经典童话\",\n \"summary\": \"天鹅家族守护后代的冒险故事，展现亲情与自然法则的冲突。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《接骨木树妈妈》\",\n \"category\": \"经典童话\",\n \"summary\": \"接骨木树精灵为男孩展示生命轮回的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓦尔都窗前的一瞥》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过修道院窗户见证的三个场景，讲述人生选择的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在遥远的海极》\",\n \"category\": \"经典童话\",\n \"summary\": \"企鹅与信天翁的对话展现不同地域文化碰撞的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小鬼和小商人》\",\n \"category\": \"经典童话\",\n \"summary\": \"精灵小鬼帮助商人重拾善良本性的奇幻故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《幸运的贝儿》\",\n \"category\": \"经典童话\",\n \"summary\": \"穷苦青年贝儿通过音乐天赋改变命运，最终与贵族女子结婚的故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《踩着面包走的女孩》\",\n \"category\": \"经典童话\",\n \"summary\": \"傲慢女孩英格为了不弄脏鞋子将面包踩入泥泞，被沼泽女巫惩罚坠入地狱的奇幻经历。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《安妮·莉斯贝》\",\n \"category\": \"经典童话\",\n \"summary\": \"因抛弃私生子而遭诅咒的母亲，在鬼魂指引下经历灵魂救赎的悲情故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《在养鸭场里》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过一只瘸腿小鸭的成长经历，展现自然界的残酷与生命力。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《老约翰尼讲的故事》\",\n \"category\": \"经典童话\",\n \"summary\": \"老人用四季更迭比喻人生哲理的寓言故事，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《墓穴里的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"母亲在墓地守候亡子时与死神对话，领悟生死真谛的感人故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《蝴蝶》\",\n \"category\": \"经典童话\",\n \"summary\": \"蝴蝶寻找理想伴侣的奇幻旅程，揭示爱情与生命真谛的寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《荞麦》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过植物视角讲述骄傲导致毁灭的自然寓言，出自《安徒生童话》。\"\n },\n {\n \"title\": \"《单身汉的睡帽》\",\n \"category\": \"经典童话\",\n \"summary\": \"老单身汉通过睡帽回忆往事，展现人生遗憾与温情的哲理故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《海象与蜗牛》\",\n \"category\": \"经典童话\",\n \"summary\": \"急于求成的蜗牛被海象欺骗的寓言，强调耐心的重要性。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《枞树》\",\n \"category\": \"经典童话\",\n \"summary\": \"渴望长大的枞树经历四季轮回，最终领悟生命意义的自然寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《小杜克》\",\n \"category\": \"经典童话\",\n \"summary\": \"患难中成长的男孩杜克在困境中坚持学习，最终获得幸福的人生故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《癞蛤蟆》\",\n \"category\": \"经典童话\",\n \"summary\": \"跨越种族的友谊与牺牲故事，讲述魔法宝石引发的奇幻冒险。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《瓶颈大衣》\",\n \"category\": \"经典童话\",\n \"summary\": \"拟人化的大衣见证主人一生沉浮，反映社会变迁的讽刺寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《衬衫领子》\",\n \"category\": \"经典童话\",\n \"summary\": \"通过衬衫领子的视角，讲述关于身份与骄傲的幽默寓言。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《顽皮的孩子》\",\n \"category\": \"经典童话\",\n \"summary\": \"顽童恶作剧引发超自然事件，最终悔改的成长故事。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《乌鸦》\",\n \"category\": \"经典童话\",\n \"summary\": \"宫廷侍女与乌鸦的爱情故事，融合阴谋与救赎的奇幻元素。出自《安徒生童话》。\"\n },\n {\n \"title\": \"《猪倌》\",\n \"category\": \"经典童话\",\n \"summary\": \"王子化身猪","error":"AI返回内容不是有效的JSON数组"}
+Uncaught runtime errors:
+×
+ERROR
+Failed to fetch
+TypeError: Failed to fetch
+    at fetchCategories (http://localhost:3000/static/js/bundle.js:71110:23)
+    at http://localhost:3000/static/js/bundle.js:71116:5
+    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
+    at commitPassiveMountOnFiber (http://localhost:3000/static/js/bundle.js:55376:17)
+    at commitPassiveMountEffects_complete (http://localhost:3000/static/js/bundle.js:55348:13)
+    at commitPassiveMountEffects_begin (http://localhost:3000/static/js/bundle.js:55338:11)
+    at commitPassiveMountEffects (http://localhost:3000/static/js/bundle.js:55328:7)
+    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57211:7)
+    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
+    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
+ERROR
+Failed to fetch
+TypeError: Failed to fetch
+    at fetchStories (http://localhost:3000/static/js/bundle.js:70868:23)
+    at http://localhost:3000/static/js/bundle.js:70905:5
+    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
+    at commitPassiveMountOnFiber (http://localhost:3000/static/js/bundle.js:55376:17)
+    at commitPassiveMountEffects_complete (http://localhost:3000/static/js/bundle.js:55348:13)
+    at commitPassiveMountEffects_begin (http://localhost:3000/static/js/bundle.js:55338:11)
+    at commitPassiveMountEffects (http://localhost:3000/static/js/bundle.js:55328:7)
+    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57211:7)
+    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
+    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
+ERROR
+Failed to fetch
+TypeError: Failed to fetch
+    at fetchCategories (http://localhost:3000/static/js/bundle.js:70856:23)
+    at http://localhost:3000/static/js/bundle.js:70906:5
+    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
+    at commitPassiveMountOnFiber (http://localhost:3000/static/js/bundle.js:55376:17)
+    at commitPassiveMountEffects_complete (http://localhost:3000/static/js/bundle.js:55348:13)
+    at commitPassiveMountEffects_begin (http://localhost:3000/static/js/bundle.js:55338:11)
+    at commitPassiveMountEffects (http://localhost:3000/static/js/bundle.js:55328:7)
+    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57211:7)
+    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
+    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
+ERROR
+Failed to fetch
+TypeError: Failed to fetch
+    at fetchStories (http://localhost:3000/static/js/bundle.js:70868:23)
+    at http://localhost:3000/static/js/bundle.js:70905:5
+    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
+    at invokePassiveEffectMountInDEV (http://localhost:3000/static/js/bundle.js:55572:17)
+    at invokeEffectsInDev (http://localhost:3000/static/js/bundle.js:57469:15)
+    at commitDoubleInvokeEffectsInDEV (http://localhost:3000/static/js/bundle.js:57452:11)
+    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57225:9)
+    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
+    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
+    at flushSyncCallbacks (http://localhost:3000/static/js/bundle.js:44389:26)
+ERROR
+Failed to fetch
+TypeError: Failed to fetch
+    at fetchCategories (http://localhost:3000/static/js/bundle.js:71110:23)
+    at http://localhost:3000/static/js/bundle.js:71116:5
+    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
+    at invokePassiveEffectMountInDEV (http://localhost:3000/static/js/bundle.js:55572:17)
+    at invokeEffectsInDev (http://localhost:3000/static/js/bundle.js:57469:15)
+    at commitDoubleInvokeEffectsInDEV (http://localhost:3000/static/js/bundle.js:57452:11)
+    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57225:9)
+    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
+    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
+    at flushSyncCallbacks (http://localhost:3000/static/js/bundle.js:44389:26)
+ERROR
+Failed to fetch
+TypeError: Failed to fetch
+    at fetchCategories (http://localhost:3000/static/js/bundle.js:70856:23)
+    at http://localhost:3000/static/js/bundle.js:70906:5
+    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
+    at invokePassiveEffectMountInDEV (http://localhost:3000/static/js/bundle.js:55572:17)
+    at invokeEffectsInDev (http://localhost:3000/static/js/bundle.js:57469:15)
+    at commitDoubleInvokeEffectsInDEV (http://localhost:3000/static/js/bundle.js:57452:11)
+    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57225:9)
+    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
+    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
+    at flushSyncCallbacks (http://localhost:3000/static/js/bundle.js:44389:26)
