加入了AI编程记忆恢复

--- a/系统架构与代码地图.md
+++ b/系统架构与代码地图.md
@@ -7,34 +7,38 @@
 ### 1. 总体结构
 
 ```
-┌─────────────┐         HTTP/REST         ┌─────────────┐
-│   前端 React │  <-------------------->  │   Flask后端  │
-└─────────────┘                           └─────────────┘
-         │                                      │
-         │                                      │
-         ▼                                      ▼
-   用户浏览器                        SQLite数据库（stories.db）
+┌──────────────┐         HTTP/REST         ┌──────────────┐
+│   前端 React  │  <-------------------->  │   Flask后端   │
+└──────────────┘                           └──────────────┘
+         │                                         │
+         │                                         │
+         ▼                                         ▼
+   用户浏览器                           SQLite数据库（stories.db）
 ```
 
 - **前端**：React + MUI，负责用户交互、数据展示、采集请求发起。
 - **后端**：Flask + SQLAlchemy，负责API服务、AI采集、数据库管理、分类管理等。
 - **数据库**：SQLite，存储故事、分类等数据。
+- **AI内容生成**：通过硅基流动API，结合动态Prompt模板，自动采集和生成故事内容。
 
 ---
 
 ### 2. 主要功能模块
 
 #### 前端
-- **故事采集 StoryCollector**：采集AI故事，支持分类、数量、主题等参数。
+- **故事采集 StoryCollector**：采集AI故事，支持分类、数量、主题等参数，采集日志、进度、结果展示。
 - **故事上传 StoryUpload**：批量上传CSV故事。
 - **分类管理 CategoryManager**：增删改查故事分类。
 - **故事展示/筛选**：按分类、关键词等条件浏览故事。
+- **故事管理**：支持故事的编辑、删除、批量操作、导出（CSV/Excel）、历史追溯。
+- **可视化与统计**：分类统计、数据可视化。
 
 #### 后端
-- **故事API**：增删改查、采集、批量上传。
+- **故事API**：增删改查、采集、批量上传、批量删除、导出。
 - **分类API**：增删改查、同步故事表分类。
-- **AI采集逻辑**：调用大模型，动态生成Prompt，采集并去重。
+- **AI采集逻辑**：调用大模型，动态生成Prompt，强制采集指定数量，结合数据库去重，优先补足数量，采集多样性，返回JSON数组。
 - **日志与错误处理**：详细记录采集、存储、API调用等过程。
+- **查重逻辑**：上传和采集时自动查重，前端有查重提示，后端严格查重。
 
 ---
 
@@ -43,7 +47,7 @@
 ### 1. 目录结构
 
 ```
-Cursor/
+story-collector4/
 ├── backend/
 │   ├── app.py                # Flask主应用，所有API与业务逻辑
 │   ├── requirements.txt      # 后端依赖
@@ -59,6 +63,8 @@ Cursor/
 │   └── package.json          # 前端依赖
 ├── optimized_story_collect_prompt.md # AI采集Prompt模板
 ├── README.md
+├── start_all.bat             # 一键启动脚本（Windows）
+├── start_services.ps1        # 一键启动脚本（PowerShell）
 └── ...（日志、文档等）
 ```
 
@@ -71,7 +77,7 @@ Cursor/
 - **app.py**
   - Flask应用主入口，包含所有API路由
   - SQLAlchemy模型定义（Story, Category）
-  - 采集、上传、分类、编辑、删除等API
+  - 采集、上传、分类、编辑、删除、导出等API
   - AI采集逻辑（Prompt模板读取、变量替换、API调用、去重、存储）
 
 - **requirements.txt**
@@ -96,7 +102,7 @@ Cursor/
   - 分类的增删改查
 
 - **其他组件**
-  - 如故事列表、详情、筛选等
+  - 如故事列表、详情、筛选、批量操作、导出、统计等
 
 #### 其他
 
@@ -106,9 +112,43 @@ Cursor/
 - **README.md**
   - 项目说明、部署、使用文档
 
+- **start_all.bat / start_services.ps1**
+  - 一键启动前后端服务脚本，便于本地快速部署
+
 ---
 
-## 三、模块化建议与衍生方向
+## 三、AI采集逻辑说明
+
+- 动态构建Prompt，强制采集指定数量（N）个指定分类（category）的故事，必须去重，优先补足数量。
+- 只排除与数据库已有故事"标题完全相同"或"核心情节完全一致"的故事。
+- 返回格式为JSON数组，每个故事包含title、category、summary（含出处）。
+- summary内容简洁明了，适合表格展示。
+- 只输出JSON数组，不输出任何解释或多余内容。
+- 支持多版本、地方讲法、细节变化的故事采集，鼓励多样性。
+
+---
+
+## 四、测试与质量保障
+
+- 功能测试：采集、查重、上传、编辑、删除、导出、批量操作、进度日志、历史追溯等。
+- 参数与模型测试：AI模型切换、参数调整、API Key配置等。
+- 查重与一致性：重复检测、数据库与前端一致性。
+- 交互与体验：进度提示、错误反馈、表单校验、详情查看。
+- 边界与异常：超长输入、空内容、重复提交、接口超时、API限流等。
+- 扩展性与安全：自定义选项、批量采集、内容安全、用户反馈。
+
+---
+
+## 五、启动与部署
+
+- **一键启动**：双击`start_all.bat`或运行`start_services.ps1`，前端（http://localhost:3000）和后端（http://localhost:5000）自动启动。
+- **手动启动**：分别进入backend和frontend目录，激活虚拟环境、安装依赖、运行服务。
+- **常见问题**：端口冲突、依赖安装慢、数据库丢失等均有应对说明。
+- **进阶**：支持前端打包、后端打包为exe、Docker部署等。
+
+---
+
+## 六、模块化建议与衍生方向
 
 1. **前端**
    - 各功能组件独立，便于按需组合、复用
