--- a/测试问题整理.md
+++ b/测试问题整理.md
@@ -1,52 +1,48 @@
-Uncaught runtime errors:
-×
-ERROR
-Failed to fetch
-TypeError: Failed to fetch
-    at fetchCategories (http://localhost:3000/static/js/bundle.js:71110:23)
-    at http://localhost:3000/static/js/bundle.js:71116:5
-    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
-    at commitPassiveMountOnFiber (http://localhost:3000/static/js/bundle.js:55376:17)
-    at commitPassiveMountEffects_complete (http://localhost:3000/static/js/bundle.js:55348:13)
-    at commitPassiveMountEffects_begin (http://localhost:3000/static/js/bundle.js:55338:11)
-    at commitPassiveMountEffects (http://localhost:3000/static/js/bundle.js:55328:7)
-    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57211:7)
-    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
-    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
-ERROR
-Failed to fetch
-TypeError: Failed to fetch
-    at fetchStories (http://localhost:3000/static/js/bundle.js:70868:23)
-    at http://localhost:3000/static/js/bundle.js:70905:5
-    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
-    at commitPassiveMountOnFiber (http://localhost:3000/static/js/bundle.js:55376:17)
-    at commitPassiveMountEffects_complete (http://localhost:3000/static/js/bundle.js:55348:13)
-    at commitPassiveMountEffects_begin (http://localhost:3000/static/js/bundle.js:55338:11)
-    at commitPassiveMountEffects (http://localhost:3000/static/js/bundle.js:55328:7)
-    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57211:7)
-    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
-    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
-ERROR
-Failed to fetch
-TypeError: Failed to fetch
-    at fetchCategories (http://localhost:3000/static/js/bundle.js:70856:23)
-    at http://localhost:3000/static/js/bundle.js:70906:5
-    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
-    at commitPassiveMountOnFiber (http://localhost:3000/static/js/bundle.js:55376:17)
-    at commitPassiveMountEffects_complete (http://localhost:3000/static/js/bundle.js:55348:13)
-    at commitPassiveMountEffects_begin (http://localhost:3000/static/js/bundle.js:55338:11)
-    at commitPassiveMountEffects (http://localhost:3000/static/js/bundle.js:55328:7)
-    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57211:7)
-    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
-    at performSyncWorkOnRoot (http://localhost:3000/static/js/bundle.js:56381:7)
-ERROR
-Failed to fetch
-TypeError: Failed to fetch
-    at fetchStories (http://localhost:3000/static/js/bundle.js:70868:23)
-    at http://localhost:3000/static/js/bundle.js:70905:5
-    at commitHookEffectListMount (http://localhost:3000/static/js/bundle.js:53883:30)
-    at invokePassiveEffectMountInDEV (http://localhost:3000/static/js/bundle.js:55572:17)
-    at invokeEffectsInDev (http://localhost:3000/static/js/bundle.js:57469:15)
-    at commitDoubleInvokeEffectsInDEV (http://localhost:3000/static/js/bundle.js:57452:11)
-    at flushPassiveEffectsImpl (http://localhost:3000/static/js/bundle.js:57225:9)
-    at flushPassiveEffects (http://localhost:3000/static/js/bundle.js:57164:18)
+react-dom.development.js:29895 Download the React DevTools for a better development experience: https://reactjs.org/link/react-devtools
+StoryLibraryPage.jsx:110 Uncaught TypeError: Cannot read properties of undefined (reading 'includes')
+    at StoryLibraryPage.jsx:110:1
+    at Array.filter (<anonymous>)
+    at StoryLibraryPage (StoryLibraryPage.jsx:110:1)
+    at renderWithHooks (react-dom.development.js:15486:1)
+    at updateFunctionComponent (react-dom.development.js:19617:1)
+    at beginWork (react-dom.development.js:21640:1)
+    at HTMLUnknownElement.callCallback (react-dom.development.js:4164:1)
+    at Object.invokeGuardedCallbackDev (react-dom.development.js:4213:1)
+    at invokeGuardedCallback (react-dom.development.js:4277:1)
+    at beginWork$1 (react-dom.development.js:27490:1)
+StoryLibraryPage.jsx:110 Uncaught TypeError: Cannot read properties of undefined (reading 'includes')
+    at StoryLibraryPage.jsx:110:1
+    at Array.filter (<anonymous>)
+    at StoryLibraryPage (StoryLibraryPage.jsx:110:1)
+    at renderWithHooks (react-dom.development.js:15486:1)
+    at updateFunctionComponent (react-dom.development.js:19617:1)
+    at beginWork (react-dom.development.js:21640:1)
+    at HTMLUnknownElement.callCallback (react-dom.development.js:4164:1)
+    at Object.invokeGuardedCallbackDev (react-dom.development.js:4213:1)
+    at invokeGuardedCallback (react-dom.development.js:4277:1)
+    at beginWork$1 (react-dom.development.js:27490:1)
+react-dom.development.js:18704 The above error occurred in the <StoryLibraryPage> component:
+
+    at StoryLibraryPage (http://localhost:3000/static/js/bundle.js:81832:80)
+    at div
+    at http://localhost:3000/static/js/bundle.js:909:66
+    at Box (http://localhost:3000/static/js/bundle.js:29277:72)
+    at div
+    at http://localhost:3000/static/js/bundle.js:909:66
+    at Container (http://localhost:3000/static/js/bundle.js:28698:19)
+    at App (http://localhost:3000/static/js/bundle.js:78264:74)
+
+Consider adding an error boundary to your tree to customize error handling behavior.
+Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.
+logCapturedError @ react-dom.development.js:18704
+react-dom.development.js:26962 Uncaught TypeError: Cannot read properties of undefined (reading 'includes')
+    at StoryLibraryPage.jsx:110:1
+    at Array.filter (<anonymous>)
+    at StoryLibraryPage (StoryLibraryPage.jsx:110:1)
+    at renderWithHooks (react-dom.development.js:15486:1)
+    at updateFunctionComponent (react-dom.development.js:19617:1)
+    at beginWork (react-dom.development.js:21640:1)
+    at beginWork$1 (react-dom.development.js:27465:1)
+    at performUnitOfWork (react-dom.development.js:26596:1)
+    at workLoopSync (react-dom.development.js:26505:1)
+    at renderRootSync (react-dom.development.js:26473:1)
