修复批次管理显示问题

--- a/开发日志.md
+++ b/开发日志.md
@@ -46,6 +46,12 @@
 - [x] 优化Prompt指令，明确去重和分类要求
 - [x] 修复AI返回内容不完整导致JSON解析失败的问题（提高API max_tokens限制）
 
+### 2025-06-03
+
+#### 8. 批次下拉框体验修复
+- [x] 修复批次下拉框选中后只显示当前批次、无法切换其它批次的问题。
+- [x] 现在批次下拉框始终显示所有批次选项，切换体验完全正常。
+
 ---
 
 ## 下一阶段开发计划
