--- a/系统架构与代码地图.md
+++ b/系统架构与代码地图.md
@@ -29,7 +29,8 @@
 - **故事采集 StoryCollector**：采集AI故事，支持分类、数量、主题等参数，采集日志、进度、结果展示。
 - **故事上传 StoryUpload**：批量上传CSV故事。
 - **分类管理 CategoryManager**：增删改查故事分类。
-- **故事展示/筛选**：按分类、关键词等条件浏览故事。
+- **故事展示/筛选**：按分类、关键词、批次、时间区间等条件浏览故事。
+  - 批次下拉框支持全局批次切换，始终显示所有批次选项，切换体验优化。
 - **故事管理**：支持故事的编辑、删除、批量操作、导出（CSV/Excel）、历史追溯。
 - **可视化与统计**：分类统计、数据可视化。
 
